[gd_scene load_steps=5 format=3 uid="uid://cpooobyvf5fxs"]

[ext_resource type="Script" path="res://Scripts/UI/UI.gd" id="1_llrig"]
[ext_resource type="PackedScene" uid="uid://cwwc33y6i53hi" path="res://Nodes/UI/Hmenu.tscn" id="2_oyakn"]
[ext_resource type="PackedScene" uid="uid://driu5hknh1ine" path="res://Nodes/UI/Settings.tscn" id="5_e1p8v"]
[ext_resource type="PackedScene" uid="uid://b0ml1y3b8ryeg" path="res://Nodes/UI/Credits.tscn" id="6_f17na"]

[node name="Global_UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_llrig")

[node name="SettingMenu" parent="." instance=ExtResource("5_e1p8v")]
visible = false
layout_mode = 1
script = null

[node name="CreditMenu" parent="." instance=ExtResource("6_f17na")]
visible = false
layout_mode = 1
script = null

[node name="HMenu" parent="." instance=ExtResource("2_oyakn")]
layout_mode = 1
script = null

[connection signal="value_changed" from="SettingMenu/MarginContainer/ContentContainer/HBoxContainer2/VSlider_Music" to="." method="_on_v_slider_music_value_changed"]
[connection signal="value_changed" from="SettingMenu/MarginContainer/ContentContainer/HBoxContainer2/VSlider2_Sound" to="." method="_on_v_slider_2_sound_value_changed"]
[connection signal="value_changed" from="SettingMenu/MarginContainer/ContentContainer/HBoxContainer2/VSlider3_MouseS" to="." method="_on_v_slider_3_mouse_s_value_changed"]
[connection signal="toggled" from="SettingMenu/MarginContainer/ContentContainer/HBoxContainer2/CheckBox_Invert" to="." method="_on_check_box_invert_toggled"]
[connection signal="toggled" from="SettingMenu/MarginContainer/ContentContainer/HBoxContainer2/CheckBox2_Screen" to="." method="_on_check_box_2_screen_toggled"]

[editable path="SettingMenu"]
[editable path="CreditMenu"]
[editable path="HMenu"]
