[gd_scene load_steps=5 format=3 uid="uid://dxicy33l6u3x3"]

[ext_resource type="Script" path="res://Scripts/UI/UI.gd" id="1_jkup7"]
[ext_resource type="Theme" uid="uid://b32w5x4g7q7o0" path="res://Assets/Textures/UI/theme.tres" id="1_p481u"]
[ext_resource type="StyleBox" uid="uid://cbylmou68dbqw" path="res://Assets/Textures/UI/style_boxy.tres" id="2_yfinc"]
[ext_resource type="StyleBox" uid="uid://bsjbr8wm3qfsk" path="res://Assets/Textures/UI/style_box_hover.tres" id="3_o6ymd"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jkup7")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 80

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 0.584314)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ColorRect"]
layout_mode = 2
offset_right = 1792.0
offset_bottom = 920.0

[node name="Label" type="Label" parent="MarginContainer/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_p481u")
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 100
text = "Life Support"

[node name="LabeleDescription" type="Label" parent="MarginContainer/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_p481u")
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 25
text = "                                                 Deep Sea Adventure"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="Button_Start" type="Button" parent="MarginContainer/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_p481u")
theme_override_colors/font_color = Color(0, 0, 0.337255, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.617389, 0.229252, 1)
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = ExtResource("2_yfinc")
theme_override_styles/hover = ExtResource("3_o6ymd")
text = "Resume"

[node name="Button_Settings" type="Button" parent="MarginContainer/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_p481u")
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.617389, 0.229252, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("2_yfinc")
theme_override_styles/hover = ExtResource("3_o6ymd")
text = "Settings"

[node name="Button_Credits" type="Button" parent="MarginContainer/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_p481u")
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.617389, 0.229252, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("2_yfinc")
theme_override_styles/hover = ExtResource("3_o6ymd")
text = "Credits"

[node name="Button_Quit" type="Button" parent="MarginContainer/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_p481u")
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.617389, 0.229252, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("2_yfinc")
theme_override_styles/hover = ExtResource("3_o6ymd")
text = "Quit"

[node name="Label" type="Label" parent="MarginContainer/ColorRect"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 0
offset_left = 764.0
offset_top = 339.0
offset_right = 1164.0
offset_bottom = 452.0
theme_override_font_sizes/font_size = 80
text = "Paused"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(200, 150)
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/CenterContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2

[connection signal="pressed" from="MarginContainer/ColorRect/VBoxContainer/Button_Start" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/ColorRect/VBoxContainer/Button_Settings" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/ColorRect/VBoxContainer/Button_Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MarginContainer/ColorRect/VBoxContainer/Button_Quit" to="." method="_on_quit_pressed"]
